--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ DESCRIPTION: Two-column fixed layout with one sidebar right of content
 }
 #content {
 	margin: 0 280px 0 20px;
+
 }
 
 #primary,
@@ -213,7 +214,7 @@ hr {
 	border: 0;
 	clear: both;
 	height: 1px;
-	margin-bottom: 18px;
+	margin-bottom: 5px;
 }
 
 /* Text elements */
@@ -471,8 +472,20 @@ div.menu li {
 #content dd,
 #content pre,
 #content hr {
-	margin-bottom: 24px;
+    /*	background-color: #c3daf2;*/
+	margin-bottom: 5px;
 }
+
+#content hr {
+    	background-color: #c3daf2;
+	margin-bottom: 5px;
+}
+
+#content p {
+    	text-indent: 2em;
+	line-height: 1.5em;
+}
+
 #content ul ul,
 #content ol ol,
 #content ul ol,
@@ -504,26 +517,32 @@ div.menu li {
 	margin: 0 0 20px 0;
 }
 #content table {
-	border: 1px solid #e7e7e7;
+	/*border: 1px solid #e7e7e7;*/
 	margin: 0 -1px 24px 0;
 	text-align: left;
 	width: 100%;
 }
 #content tr th,
 #content thead th {
-	color: #888;
+	/*color: #888;*/
 	font-size: 12px;
 	font-weight: bold;
 	line-height: 18px;
 	padding: 9px 24px;
 }
 #content tr td {
-	border-top: 1px solid #e7e7e7;
-	padding: 6px 24px;
+	/*border-top: 1px solid #e7e7e7;*/
+	padding: 2px 2px;
 }
 #content tr.odd td {
 	background: #f2f7fc;
 }
+
+#content a:link,
+#content a:visited {
+	text-decoration: none;
+}
+
 .hentry {
 	margin: 0 0 48px 0;
 }
@@ -644,6 +663,7 @@ div.menu li {
 	text-align: left;
 	width: 33%;
 }
+
 .page-link {
 	color: #000;
 	font-weight: bold;
