--- a/style.css
+++ b/style.css
@@ -206,9 +206,9 @@ body {
 body,
 input,
 textarea {
-	color: #666;
-	font-size: 12px;
-	line-height: 18px;
+	color: #000;
+	font-size: 10pt;
+	line-height: 1.5em;
 }
 hr {
 	background-color: #e7e7e7;
@@ -1129,7 +1129,8 @@ h3#reply-title {
 	margin: 0 0 18px 0;
 }
 .widget-title {
-	color: #222;
+	color: #000;
+	font-size:10pt;
 	font-weight: bold;
 }
 .widget-area a:link,
