--- a/style.css
+++ b/style.css
@@ -528,12 +528,12 @@ div.menu li {
 	color: #000;
 	font-size: 10pt;
 	font-weight: bold;
-	line-height: 18px;
+	/*line-height: 18px;*/
 	padding: 3px 24px 0 0;
 }
 #content tr td {
 	/*border-top: 1px solid #e7e7e7;*/
-	padding: 2px 2px;
+	padding: 0px 0px;
 	font-size: 10pt;
 }
 #content tr.odd td {
