--- a/style.css
+++ b/style.css
@@ -604,6 +604,14 @@ text-decoration: underline;
 	/*line-height: 1.3em;*/
 	margin-bottom: 0;
 }
+#content #head_ads {
+	color: #FF0000;
+	font-size: 21px;
+	font-weight: bold;
+	line-height: 1.3em;
+	margin-bottom: 0;
+}
+
 #content .entry-title {
 	color: #01005c;
 	font-size: 21px;
