--- a/style.css
+++ b/style.css
@@ -411,7 +411,7 @@ div.menu li {
 	-webkit-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
 	display: none;
 	position: absolute;
-	top: 38px;
+	top: 32px;
 	left: 0;
 	float: left;
 	width: 180px;
@@ -613,10 +613,10 @@ text-decoration: underline;
 }
 
 #content .entry-title {
-	color: #01005c;
-	font-size: 21px;
+	/*color: #01005c;*/
+	font-size: 24px;
 	font-weight: bold;
-	line-height: 1.3em;
+	line-height: 1.6em;
 	margin-bottom: 0;
 }
 .entry-title a:link,
@@ -629,7 +629,7 @@ text-decoration: underline;
 	color: #ff4b33;
 }
 .entry-meta {
-	color: #000;
+	color: #A0A0A0;
 	font-size: 12px;
 }
 .entry-meta abbr,
@@ -644,10 +644,14 @@ text-decoration: underline;
 .entry-summary {
 	clear: both;
 	padding: 12px 0 0 0;
+        /*background: #F9FCFE;*/
 }
 #content .entry-summary p:last-child {
 	margin-bottom: 12px;
 }
+#content .entry-content { 
+        font-size: 11pt;
+ }
 .entry-content fieldset {
 	border: 1px solid #e7e7e7;
 	margin: 0 0 24px 0;
