--- a/style.css
+++ b/style.css
@@ -629,7 +629,7 @@ text-decoration: underline;
 	color: #ff4b33;
 }
 .entry-meta {
-	color: #A0A0A0;
+	/*color: #A0A0A0;*/
 	font-size: 12px;
 }
 .entry-meta abbr,
@@ -650,7 +650,7 @@ text-decoration: underline;
 	margin-bottom: 12px;
 }
 #content .entry-content { 
-        font-size: 11pt;
+        font-size: 10pt;
  }
 .entry-content fieldset {
 	border: 1px solid #e7e7e7;
@@ -1389,4 +1389,23 @@ code {
 
 .my_page_num {
     font-size:10pt;
+}
+
+#toparticle { 
+ padding:24px 0 0 0;             
+   font-size:10pt;
+   width:100%;
+ }
+
+#toparticle h2{ 
+   font-size:16pt;
+   font-weight: bold;
+   line-height: 1.0em;
+}
+
+#toparticle a:visited {
+   color: #1453b1;
+}
+#toparticle a:link {
+	color: #1453b1;/*#0066cc;*/
 }
