查找正文中的关键字,使用新的域名来高亮这些关键字

--- a/style.css
+++ b/style.css
@@ -497,6 +497,8 @@ div.menu li {
 }
 
 #content p {
+        padding-top: 10px;
+        padding-bottom:10px;
     	text-indent: 0em;
 	line-height: 1.8em;
 }
